Bug 877368 - App tabs are missing separators when there is tab overflow. r=dao
UltraBlame original commit: 7818d3b94911506b7a27db111d0203577d97c429

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -230,7 +230,8 @@
 
 
 #tabbrowser-tabs[positionpinnedtabs] > .tabbrowser-tab[pinned]::before {
-  position: fixed;
+  height: 100%;
+  position: absolute;
 }
 
 .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]) > .tab-stack > .tab-content {
